feat: Add new 3D fern preset, implement logarithmic width control, and introduce gradual branch tapering with updated L-system presets.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <option value="tree1">Organic Tree 1</option>
                 <option value="tree2">Organic Tree 2</option>
                 <option value="pine">Pine Tree (3D)</option>
-                <option value="fern">Green Fern (3D)</option>
+                <option value="fern">Green Fern (2D)</option>
+                <option value="fern3d">Expanded Fern (3D)</option>
                 <option value="bush">Flowering Bush</option>
                 <option value="hilbert">Hilbert Curve 3D</option>
                 <option value="twisted">Twisted Spire</option>
@@ -129,7 +130,7 @@
 
         <div class="control-group">
             <label class="control-label">Thickness <span id="width-val" class="text-blue-400">0.1</span></label>
-            <input type="range" id="width" min="0.01" max="5" step="0.01" value="0.1">
+            <input type="range" id="width" min="0" max="1" step="0.001" value="0.2">
         </div>
 
         <div class="control-group">
