--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <label class="control-label">Preset</label>
             <select id="preset-select"
                 class="w-full bg-slate-800 border border-slate-600 rounded px-2 py-1 text-sm focus:outline-none focus:border-blue-500">
+                <option value="bush">Flowering Bush</option>
+                <option value="pine">Pine Tree (3D)</option>
+                <option value="fern3d">Expanded Fern (3D)</option>
+                <option value="spire">Twisted Spire (3D)</option>
+                <option value="hilbert">Hilbert Curve (3D)</option>
                 <option value="tree1">Organic Tree 1</option>
                 <option value="tree2">Organic Tree 2</option>
-                <option value="pine">Pine Tree (3D)</option>
+                <option value="barnsley">Barnsley Fern (2D)</option>
                 <option value="fern">Green Fern (2D)</option>
-                <option value="fern3d">Expanded Fern (3D)</option>
-                <option value="bush">Flowering Bush</option>
-                <option value="hilbert">Hilbert Curve 3D</option>
-                <option value="twisted">Twisted Spire</option>
-                <option value="barnsley">Barnsley Fern</option>
             </select>
         </div>
 
@@ -78,10 +78,6 @@
             <input type="range" id="width-taper" min="0.5" max="1.0" step="0.01" value="0.7">
         </div>
 
-        <div class="control-group flex items-center gap-2 mt-2">
-            <input type="checkbox" id="smooth-joints" class="w-4 h-4">
-            <label for="smooth-joints" class="control-label mb-0">Smooth Joints (Spheres)</label>
-        </div>
         <div class="control-group flex items-center gap-2 mt-2">
             <input type="checkbox" id="show-ground" class="w-4 h-4" checked>
             <label for="show-ground" class="control-label mb-0">Show Ground (Shadows)</label>
